@@ -680,14 +680,18 @@ parse_and_write_detail_xml_data(const gchar *station_id, xmlNode *root_node, con
                                 first_midnight = 0;
                             if (!first_item && hour == 0) 
                                 offset = 3600*24;
-                            first_item = 0;
-                            //t_start = current_day + 3600*hour + offset - timezone*3600; 
                             t_start = current_day + 3600*hour + offset; 
+                            if (first_item == 1)
+                                t_start = t_start - 3600;
+                            //t_start = current_day + 3600*hour + offset - timezone*3600; 
                             xmlFree(temp_xml_string);
                             fprintf(file_out,"    <period start=\"%li\"", t_start);
                             /* 1 hour for weather.com */
-    		            fprintf(file_out," end=\"%li\" hour=\"true\">\n", t_start + 1*3600); 
-
+                            if (first_item == 1)
+                                fprintf(file_out," end=\"%li\" hour=\"true\">\n", t_start + 2*3600); 
+                            else
+                                fprintf(file_out," end=\"%li\" hour=\"true\">\n", t_start + 1*3600); 
+                            first_item = 0;
                             for(child_node2 = child_node->children; child_node2; child_node2 = child_node2->next){
                                 if( child_node2->type == XML_ELEMENT_NODE){
                                     /* hour temperature */
